<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="3dp"
                android:layout_centerVertical="true"
                android:layout_height="15dp"
                android:background="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="?textsizes"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:text="@string/convenience_service"/>

            <TextView
                android:id="@+id/moreconven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="?textsizes"
                android:text="@string/more"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/express"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/express_search"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/express"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/livingpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/living_payment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/livingpay"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/violation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/violation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/violation"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/trick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ticket_booking"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="?textsizes"
                    android:text="@string/trick"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>