<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/centershow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/centershow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/center_show"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/centerdynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/center_dynamic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"

                    android:textSize="?textsizes"
                    android:text="@string/center_dynamic"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/policy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"

                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/policy"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/comlaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/complaint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="?textsizes"
                    android:text="@string/compaint"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/hotitems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/hot_items"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="?textsizes"
                    android:text="@string/hot_items"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/onlinehall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/online_hall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/online_hall"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/onlinebooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/online_booking"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/online_booking"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/progresssearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/progress_search"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="?textsizes"
                    android:text="@string/progress_search"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>