<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/g_halltitlebar"></include>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/halltype_shape"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="?textsizes"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:padding="5dp"
            android:background="@drawable/hall_left_shape"
            android:text="@string/hall_type1"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/theme_color"/>
        <TextView
            android:id="@+id/ledal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:textColor="@color/theme_color"
            android:textSize="?textsizes"
            android:gravity="center"
            android:text="@string/hall_type2"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/theme_color"/>
        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:textColor="@color/theme_color"
            android:textSize="?textsizes"
            android:gravity="center"
            android:text="@string/hall_type3"/>

    </LinearLayout>

    <com.zq.xinjiang.government.view.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.zq.xinjiang.government.view.NoScrollViewPager>
</LinearLayout>