<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textSize="?textsizes"
                android:textColor="@color/black"
                android:text="大合阳真美丽，大合阳真漂亮"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/guidance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textSize="?textsizes"
                    android:textColor="@color/theme_color"
                    android:background="@drawable/halltype_shape"
                    android:text="@string/guidance"
                    />

                <TextView
                    android:id="@+id/online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="?textsizes"
                    android:textColor="@color/theme_color"
                    android:background="@drawable/halltype_shape"
                    android:text="@string/onlinetodeal"
                    />

                <TextView
                    android:id="@+id/booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"

                    android:textSize="?textsizes"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/theme_color"
                    android:background="@drawable/halltype_shape"
                    android:text="@string/online"
                    />

                <TextView
                    android:id="@+id/collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="?textsizes"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textColor="@color/theme_color"
                    android:background="@drawable/halltype_shape"
                    android:text="@string/tocollect"
                    />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/right"
            android:background="@color/blue"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_line"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/interval"/>

</LinearLayout>