<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg" >

        <ImageView
            android:id="@+id/return_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/return_to_main" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="关于我们"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/banner"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gy01"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/gsmc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <View style="@style/xtsz_view" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gy02"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lxdh"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <View style="@style/xtsz_view" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gy03"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/gswz"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <View style="@style/xtsz_view" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gy04"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/gsdz"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/height_" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#f2f2f2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>